--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas
-numpy
-streamlit
-plotly
-requests
-pytrends
-scikit-learn
-python-dotenv
+pandas>=2.0.0
+numpy>=1.24.0
+streamlit>=1.40.0
+plotly>=5.18.0
+requests>=2.31.0
+pytrends>=4.9.0
+scikit-learn>=1.3.0
+python-dotenv>=1.0.0
